fix: Add timestamp to Image enricher, fix SO error (#2924)